# kdt-ai-2-team4

./: .claudeignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  Scaffolding.md  docker-compose.dev.yml  docker-compose.yml  environment.yml  pyproject.toml  릴리스에 파일첨부했습니다.
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: cicd.yml
ai_service/: README.md  pyproject.toml
ai_service/decoder/: .gitignore  README.md
ai_service/decoder/evaluation/: eval_metrics.py  few_shot_explan.py  gen_lora_ollama.py
ai_service/decoder/training/: config.yml  merge_qwen3_lora.py  train.py
ai_service/encoder/: README.md
ai_service/encoder/results/: README.md
ai_service/src/ai_service/: __init__.py
backend/: Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
backend/src/backend/: db.py  main.py  run.py
backend/src/backend/api/: README.md  __init__.py  predict.py  report.py  root.py
backend/src/backend/core/: README.md  config.py  exceptions.py  pydantic_settings.py
backend/src/backend/db/: README.md  __init__.py  base.py  create_tables.py  session.py
backend/src/backend/inference/: __init__.py
backend/src/backend/models/: README.md  __init__.py  inference_log.py  model_info.py  smishing_log.py  static_patterns.py
backend/src/backend/repository/: README.md  static_pattern_repository.py
backend/src/backend/schemas/: README.md  __init__.py  predict_api.py  report_api.py
backend/src/backend/services/: README.md  predict_service.py  report_service.py
backend/src/backend/templates/: predict_templates.py
backend/src/backend/utils/: preprocessor.py
backend/tests/: conftest.py  test_main.py
deploy/: .env.example  Dockerfile  Dockerfile.example  README.md  ai_service_hf_wrapper.md  api_contract.md  architecture.md  deployment_options.md  docker-compose.example.yml  docker_setup.md  encoder_endpoint_deploy.md  hf_endpoint_checklist.md  hf_serverless_checklist.md  mlops_strategy.md  mock_api_spec.md  requirements.txt  team_overview.md
deploy/app/: __init__.py  main.py
deploy/tests/: test_normalization.py
docs/: CONTRIBUTING.md  MONOREPO.md
e2e_tests/: README.md
frontend/: README.md  pyproject.toml
frontend/src/frontend_python/: __init__.py
frontend/web_mvp/: .env.example  .gitignore  README.md  README_MVP.md  index.html  package-lock.json  package.json  vite.config.js
frontend/web_mvp/src/: App.jsx  constants.js  styles.css  tokens.css
frontend/web_mvp/src/components/layout/: Header.jsx
frontend/web_mvp/src/components/mvp/: ui.jsx
frontend/web_mvp/src/data/: mvpTabs.js  staticContent.js
frontend/web_mvp/src/pages/: CasesPage.jsx  CheckPage.jsx  GuidePage.jsx  ReportPage.jsx  ResultPage.jsx
frontend/web_mvp/src/services/: smishingService.js
frontend/web_mvp/src/utils/: API_URL.js  analyzeSmishing.js  analyzeSmishing.test.js  getCookie.js  handleReportSubmit.js
frontend_python/: README.md  pyproject.toml
frontend_python/web_mvp/: README.md
frontend_python/web_mvp/src/pages/: CheckPage.jsx  ReportPage.jsx  ResultPage.jsx
frontend_python/web_mvp/src/utils/: analyzeSmishing.js
infra/: .terraform.lock.hcl  .terraform.tfstate.lock.info  README.md  main.tf  outputs.tf  provider.tf  variables.tf
load_tests/: README.md
nginx/: nginx.conf
prometheus/: prometheus.yml
