[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
]
requires-python = ">=3.12"
dependencies = [ # 운영용 의존성
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [ # 개발용 의존성
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
