[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
]
requires-python = ">=3.12,<3.13"
dependencies = [ # 운영용 의존성
    "asyncmy>=0.2.11",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.0",
    "gunicorn>=26.0.0",
    "huggingface-hub>=1.2.0",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator==6.0.0",
    "pydantic-settings>=2.14.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49", # 2.0 이상이 AsyncSession 지원.
    "starlette==1.0.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [ # 개발용 의존성
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath=["src"] # 파이썬 import용
testpaths = ["tests"]           # 테스트 파일을 찾을 기본 디렉터리
python_files = "test_*.py"      # 인식할 파일 패턴
addopts = "-v --durations=10"   # 기본 옵션 (상세 출력, 느린 테스트 표시 등)
