[project]
name = "frontend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
frontend-python = "frontend_python:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
